--- a/flask-cook/my_app/templates/auth/login.html
+++ b/flask-cook/my_app/templates/auth/login.html
@@ -1,49 +1,38 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="top-pad">
-	<div>
-		{% if form.errors %}
-		{% for message in get_flashed_messages() %}
-		<div class="alert alert-warning alert-dismissable">
-			<button type="button" class="close" data-dismiss="alert"
-			aria-hidden="true">&times;</button>
-			{{ message }}
-		</div>
-		{% endfor %}
-		{% endif %}
-	</div>
-	<br/>
-	<form
-	class="form-horizontal"
-	method="POST"
-	action="{{ url_for('auth.login') }}"
-	role="form">
-
-	{{ form.csrf_token }}
-
-	<div class="form-group">
-		<div class="row">
-			<div class="row-right col-xs-5">
-				{{ form.email.label }}:
-			</div>
-			<div class="row-left col-xs-7">
-				{{ form.email() }}
-			</div>
-		</div>
-	</div>
-	<div class="form-group">
-		<div class="row">
-			<div class="row-right col-xs-5">
-				{{ form.password.label }}:
-			</div>
-			<div class="row-left col-xs-7">
-				{{form.password() }}
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#simple-form" data-
+			toggle="tab">Old Style Login</a></li>
+			<li><a href="#openid-form" data-toggle="tab">OpenID</a></li>
+		</ul>
+		<div class="tab-content">
+			<div class="tab-pane active" id="simple-form">
+				<form
+				method="POST"
+				action="{{ url_for('auth.login') }}"
+				role="form">
+				{{ form.csrf_token }}
+				<div class="form-group">{{ form.email.label }}: {{
+					form.email() }}</div>
+					<div class="form-group">{{ form.password.label }}: {{
+						form.password() }}</div>
+						<button type="submit" class="btn btn-
+						default">Submit</button>
+					</form>
+				</div>
+				<div class="tab-pane" id="openid-form">
+					<form
+					method="POST"
+					action="{{ url_for('auth.login') }}"
+					role="form">
+					{{ openid_form.csrf_token }}
+					<div class="form-group">{{ openid_form.openid.label }}:
+						{{ openid_form.openid() }}</div>
+						<button type="submit" class="btn btn-
+						default">Submit</button>
+					</form>
+				</div>
 			</div>
 		</div>
-	</div>
-		<button type="submit" class="btn btn-default">
-			Submit
-		</button>
-	</form>
-</div>
-{% endblock %}
+		{% endblock %}
