--- a/flask-cook/my_app/templates/auth/login.html
+++ b/flask-cook/my_app/templates/auth/login.html
@@ -5,6 +5,7 @@
 		<li class="active"><a href="#simple-form" data-
 			toggle="tab">Old Style Login</a></li>
 			<li><a href="#openid-form" data-toggle="tab">OpenID</a></li>
+			<li><a href="#social-logins" data-toggle="tab">Social Logins</a></li>
 		</ul>
 		<div class="tab-content">
 			<div class="tab-pane active" id="simple-form">
@@ -32,6 +33,10 @@
 						<button type="submit" class="btn btn-
 						default">Submit</button>
 					</form>
+				</div>
+				<div class="tab-pane" id="social-logins">
+					<a href="{{ url_for('auth.facebook_login',
+					next=url_for('catalog.home')) }}">Login via Facebook</a>
 				</div>
 			</div>
 		</div>
